--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,9 @@ jobs:
       - name: Install OCaml and opam for Miking
         uses: ocaml/setup-ocaml@v2
         with:
-          ocaml-compiler: ocaml-variants.4.12.0+domains
+          ocaml-compiler: 5.0.0~beta2
           opam-repositories: |
             default: https://github.com/ocaml/opam-repository.git
-            multicore: https://github.com/ocaml-multicore/multicore-opam.git
 
       - name: Cache opam packages
         uses: actions/cache@v2
@@ -56,10 +55,9 @@ jobs:
       - name: Install OCaml and opam for Miking
         uses: ocaml/setup-ocaml@v2
         with:
-          ocaml-compiler: ocaml-variants.4.12.0+domains
+          ocaml-compiler: 5.0.0~beta2
           opam-repositories: |
             default: https://github.com/ocaml/opam-repository.git
-            multicore: https://github.com/ocaml-multicore/multicore-opam.git
 
       - name: Cache opam packages
         uses: actions/cache@v2
