--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
           make test-all
 
   build-and-test-mac-os:
-    runs-on: macos-latest
+    runs-on: macos-13
 
     steps:
       - uses: actions/checkout@v4
@@ -64,7 +64,7 @@ jobs:
       - name: Install opam packages
         run: |
           # Install dependencies of owl
-          brew install pkg-config
+          brew install pkg-config autoconf openblas
 
           # Export environment variable needed by openblas
           export PKG_CONFIG_PATH=$(brew --prefix openblas)/lib/pkgconfig
